dlan-usb-extender-3rd-party: add Devolo transitional firmware and utilities.

--- a/README
+++ b/README
@@ -3,11 +3,17 @@ OpenWrt packages makefiles for the Devolo dLAN USB Extender device.
 
 This software contains:
 
-- foot: the Qualcomm Atheros/Intellon 6300 device flashless boot utility
+* foot: the Qualcomm Atheros/Intellon 6300 device flashless boot utility
         required for booting the Power Line Communication chip
-- confmgr: a simple configuration manager utility used by foot to fetch
+
+* confmgr: a simple configuration manager utility used by foot to fetch
         and store simple key value pairs
-- hpav-firmware: the Qualcomm Atheros/Intellon 6300 firmware and PIB files
+
+* hpav-firmware: the Qualcomm Atheros/Intellon 6300 firmware and PIB files
+
+* devolo2openWRT_update.zip: transitional firmware required to allow the
+  dLAN USB Extender to be flashed with OpenWrt. See readme.txt inside the
+  ZIP file for more information
 
 See the HOWTO file for more informations about how to build, flash and
 configure OpenWrt for the Devolo dLAN USB Extender.
